test/corpus/rules.txt
=====
Rules
=====

RULE rule x PROVIDES
  fact a ONLY IF
    fact b

---

(code
  (rule_definition
    name: (descriptor)
    body: (rule_body
      (only_if
        dest_fact: (descriptor)
        src_expr: (fact_expr)))))
